--- a/flutter-app/pubspec.yaml
+++ b/flutter-app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^3.4.1
   url_launcher: ^6.3.1
   timeago: ^3.7.0
+  fl_chart: ^0.69.0
   
   # Local Storage (for offline caching)
   shared_preferences: ^2.3.2
