--- a/flutter-app/web/manifest.json
+++ b/flutter-app/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "shelfie_app",
-    "short_name": "shelfie_app",
+    "name": "shelfie",
+    "short_name": "shelfie",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#hexcode",
+    "theme_color": "#hexcode",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
