--- a/flutter-app/windows/CMakeLists.txt
+++ b/flutter-app/windows/CMakeLists.txt
@@ -4,7 +4,7 @@ project(shelfie_app LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "shelfie_app")
+set(BINARY_NAME "Shelfie")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
