--- a/flutter-app/windows/runner/Runner.rc
+++ b/flutter-app/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.shelfie" "\0"
-            VALUE "FileDescription", "shelfie_app" "\0"
+            VALUE "FileDescription", "Shelfie" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "shelfie_app" "\0"
+            VALUE "InternalName", "Shelfie" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.shelfie. All rights reserved." "\0"
-            VALUE "OriginalFilename", "shelfie_app.exe" "\0"
-            VALUE "ProductName", "shelfie_app" "\0"
+            VALUE "OriginalFilename", "shelfie.exe" "\0"
+            VALUE "ProductName", "Shelfie" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
