Add Google OAuth in app, integrated with Supabase

--- a/flutter-app/.env.example
+++ b/flutter-app/.env.example
@@ -4,6 +4,7 @@
 
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+GOOGLE_WEB_CLIENT_ID=your-google-oauth-client-id-for-web
 
 # App Configuration
 APP_NAME=Shelfie
