--- a/backend/supabase/.env.example
+++ b/backend/supabase/.env.example
@@ -8,3 +8,6 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Note: The service role key is used by Edge Functions
 # The anonymous key is used by the browser extension and Flutter app
+
+GOOGLE_CLIENT_ID=your-google-client-id-here
+GOOGLE_SECRET=your-google-secret-here
