--- a/backend/supabase/config.toml
+++ b/backend/supabase/config.toml
@@ -32,12 +32,19 @@ file_size_limit = "50MiB"
 enabled = true
 site_url = "http://127.0.0.1:3000"
 additional_redirect_urls = ["https://127.0.0.1:3000"]
-jwt_expiry = 3600
+jwt_expiry = 604800  # 7 days in seconds
 enable_refresh_token_rotation = true
 refresh_token_reuse_interval = 10
 enable_signup = true
 
 [auth.email]
-enable_signup = true
+enable_signup = false  # Disable email signup, use Google SSO only
 double_confirm_changes = true
 enable_confirmations = false
+
+# Google OAuth configuration
+[auth.external.google]
+enabled = true
+client_id = "env(GOOGLE_CLIENT_ID)"
+secret = "env(GOOGLE_SECRET)"
+redirect_uri = "http://127.0.0.1:54321/auth/v1/callback"
