--- a/flutter-app/pubspec.yaml
+++ b/flutter-app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   # Backend & API
   supabase_flutter: ^2.8.0
   dio: ^5.7.0
+  google_sign_in: ^6.2.1
   
   # Data Models & Serialization
   freezed_annotation: ^2.4.4
